--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -23,16 +23,10 @@
       padding-right: 1rem;
     }
   }
-
-  .brand {
-    // 로고
-    color: white;
-    font-size: 1.5rem;
-    font-weight: 600;
+  .header-logo {
+    width: 80px;
   }
-
   .right {
-    // 우측 내용
     margin-left: auto;
   }
 }
