--- a/src/components/list/PostList/PostList.scss
+++ b/src/components/list/PostList/PostList.scss
@@ -1,14 +1,21 @@
 @import '../../../styles/utils';
 
 .post-list {
+  border-top: 1px solid $color-black-1;
   .post-item {
-    padding: 1.5rem;
+    padding: 2rem 2rem 6rem 2rem;
     transition: all .15s ease-in;
+    .post-header {
+      display: flex;
+      justify-content: space-between;
+      }
     h2 {
-      font-size: 2rem;
-      font-weight: 400;
+      letter-spacing: -.4px;
+      text-align: left;
+      font-size: 2.2rem;
+      font-weight: 600;
+      color: $color-block-2;
       margin: 0;
-      color: $oc-gray-8;
       a {
         transition: all .15s ease-in; // 스타일 바뀔 때 애니메이션 효과
         border-bottom: 1px solid transparent;
@@ -21,17 +28,20 @@
       }
     }
     .date {
-      font-size: 0.85rem;
+      font-size: 1.4rem;
       color: $oc-gray-5;
     }
 
     p {
+      margin-top: 1rem;
+      min-height: 9rem;
+      font-size: 1.6rem;
       font-weight: 300;
       color: $oc-gray-7;
     }
 
     .tags {
-      font-size: 0.85rem;
+      font-size: 1.4rem;
       color: $oc-blue-6;
       a {
         &:hover {
