--- a/src/components/post/PostBody/PostBody.scss
+++ b/src/components/post/PostBody/PostBody.scss
@@ -2,13 +2,10 @@
 
 .post-body {
   .paper {
+    font-size: 1.6rem;
     padding: 2rem;
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
-    background: white;
-    @include material-shadow(4, 0.5);
-    // 위로 3rem 이동시켜주어 파란색 배경을 침범하게 합니다.
-    transform: translateY(-3rem);
     margin: 0 auto;
     min-height: 20rem;
 
