--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,6 +2,11 @@
 @import url("//fonts.googleapis.com/earlyaccess/notosanskr.css");
 @import url("//cdn.jsdelivr.net/gh/velopert/font-d2coding@1.2.1/d2coding.css");
 
+html {
+  // This defines what 1rem is
+  font-size: 62.5%; // 1rem = 10px; 10px/16px = 62.5%
+}
+
 body {
   margin: 0;
   box-sizing: border-box;
@@ -10,14 +15,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-// box-sizing 일괄 설정
-
-* {
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
   box-sizing: inherit;
 }
 
 // 링크 스타일 밑줄 및 색상 무효화
-
 a {
   text-decoration: inherit;
   color: inherit;
