푸터 제거 및 관리자 로그인 url 생성

--- a/src/components/common/Button/Button.scss
+++ b/src/components/common/Button/Button.scss
@@ -7,7 +7,7 @@
   padding-bottom: 0.25rem;
   font-weight: 600;
   font-size: 1.4rem;
-  color: white;
+  color: $color-block-2;
   cursor: pointer;
   user-select: none; // 드래그 방지
   display: inline-flex;
