--- a/src/components/list/Category/Category.scss
+++ b/src/components/list/Category/Category.scss
@@ -19,12 +19,27 @@
   .category-item {
     font-size: 15px;
     color: $color-gray;
+    display: inline-block;
     &:not(:last-child) {
       margin-right: 10px;
     }
+    &:after {
+      display: block;
+      content: '';
+      border-bottom: solid 1.2px $color-black-1;
+      transform: scaleX(0);
+      transition: transform .5s ease-in-out;
+    }
     &:hover {
       color: $color-black-1;
-      cursor: pointer;
     }
+    &:hover:after {
+      transform: scaleX(1);
+      transform-origin: 0 50%;
+    }
+  }
+
+  .active {
+    color: $color-black-1;
   }
 }
