--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -3,35 +3,25 @@
 
 .header {
   .header-content {
-    padding-left: 1px;
-    padding-right: 1px;
-    height: 6.5rem;
-    width: 1040px;
-    margin: 0 auto; // 중앙 정렬
-
-
-    // 내부 아이템 세로 중앙 정렬
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    // 반응형 레이아웃
+    padding-left: 1px; padding-right: 1px; height: 6.5rem; width: 1040px; margin: 0 auto; // 중앙 정렬
+    display: flex; justify-content: space-between; align-items: center;
     @include media("<wide") {
       width: 100%;
     }
     @include media("<medium") {
-      padding-left: 1rem;
-      padding-right: 1rem;
+      padding-left: 1rem; padding-right: 1rem;
     }
   }
-  .header-logo {
-    width: 80px;
-    fill: black;
+  .header-logo { width: 80px; fill: black; }
+  .nick { position: relative; display: flex; flex-direction: column; align-items: center;
+    &:hover {
+      cursor: pointer;
+      .nick-text { opacity: 1; display: block; transform: translateY(-10px); }
+      .nick-picture { filter: blur(1.2px) brightness(80%); }
+    }
   }
-  .nick-picture {
-    width: 42px;
-  }
-  .right {
-    margin-left: auto;
-  }
+  .nick-picture { width: 42px; }
+  .nick-text { transition: transform .5s; position: absolute; font-weight: bold; opacity: 0; font-size: 12px; bottom:0;
+  color: white;}
+  .header-right-side { margin-left: auto; }
 }
