--- a/src/components/common/MarkdownRender/MarkdownRender.scss
+++ b/src/components/common/MarkdownRender/MarkdownRender.scss
@@ -12,8 +12,36 @@
     }
   }
 
-  h1, h2, h3, h4 {
-    font-weight: 500;
+  h1 {
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 1.5;
+    letter-spacing: -0.5px;
+    color: #343a40;
+  }
+
+  h2 {
+    font-size: 32px;
+    font-weight: bold;
+    line-height: 1.56;
+    letter-spacing: -0.2px;
+    color: #343a40;
+  }
+
+  h3 {
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 1.5;
+    letter-spacing: 0;
+    color: #343a40;
+  }
+
+  h4 {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.56;
+    letter-spacing: 0;
+    color: #343a40;
   }
 
   // 텍스트 사이의 코드
