--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,5 @@
 /* body, 타이포그래피 등의 기본 스타일 설정 */
-@import url("//fonts.googleapis.com/earlyaccess/notosanskr.css");
+@import url("//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css");
 @import url("//cdn.jsdelivr.net/gh/velopert/font-d2coding@1.2.1/d2coding.css");
 
 html {
@@ -10,9 +10,12 @@ html {
 body {
   margin: 0;
   box-sizing: border-box;
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Spoqa Han Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
+  line-height: 1.57;
+  color: #343a40;
 }
 
 *,
